Push additional implementations